0.31
  - (EXPERIMENTAL) fix aync insert not working bug.
0.30
  - (EXPERIMENTAL) rename mycolumn_symbol attribute to mytable_symbol
0.29
  - (EXPERIMENTAL) add select method column option syntax
    {__MY__ => '*'}
    You can sepcify column names of main table very easy
  - (EXPERIMENTAL) add mycolumn_symbol attribute
0.28
  - DBIx::Custom::Result::kv method's multi option is DEPRECATED!
    added DBIx::Custom::Result::kvs method instead.
0.27
  - fixed documentation miss about execute method's table_alias option.
0.26
  - fixed bug that when id option's value is object, don't work.
0.25
  - added DBIX_CUSTOM_SUPPRESS_DEPRECATION environment varaible
    to suppress deprecation warnings
  - removed EXPERIMENTAL status from DBIx::Custom::Result::kv method
  - removed EXPERIMETNAL status from DBIx::Custom::Result::flat method
  - renamed DBIx::Custom::Result::column method to values method
    DBIx::Custom::Result::column is deprecated.
0.24
  - support schema-qualified table name
  - added EXPERIMENTAL default_schema attribute for postgresql not to conflict
    same table name.
0.23
  - DBIx::Custom::Mapper::map method support
    {value => '%<value>%'} syntax
0.22
  - added EXPERIMENTAL DBIx::Custom::Result::kv method
  - added EXPERIMENTAL DBIx::Custom::Result::flat method
  - added where => {name => [val1, val2, val3]} support
    this is expaned to "where name in (val1, val2, val3)"
0.2111
  - "created_at" option is renamed to "ctime" option.
    "created_at" is DEPRECATED!
  - "updated_at" option is renamed to "mtime" option.
    "updated_at" is DEPRECATED!
0.2110
  - Perl 5.008007 is required.
  - added EXPERIMETNAL aysnc_conf attribute
0.2109
  - select method can be called even if table name is not specified
0.2108
  - added async database access support using AnyEvent
    and added "async" option to execute method(EXPERIMENTAL)
  - EXPERIMETNAL "statement" option is replcaed "select" option
0.2107