@@ -1,4 +1,4 @@
-package MyModel8;
+package MyModel8::MyModel1;
 use DBIx::Custom::Model -base;
 
 1;
