@@ -1,4 +1,0 @@
-package MyModel8;
-use DBIx::Custom::Model -base;
-
-1;
